# grpc-codegen

./: .gitignore  BUILD.md  EXAMPLES.md  LEARN.md  README.md  SOLUTION.md  codegen.js  go.mod  package-lock.json  package.json
examples/calc/: README.md
examples/calc/calculator/calculatorpb/: calculator.pb.go  calculator_grpc.pb.go
examples/calc/calculator/client/: client.go
go-grpc/: gen.cmd  go.mod  server.go
go-grpc/client/: client.go
go-grpc/hero/: hero.pb.go  hero.proto  hero_grpc.pb.go
grpc-python/: gen.cmd  hero.proto  hero_pb2.py  hero_pb2.pyi  hero_pb2_grpc.py  main.py
learn-grpc/: gen.bat
learn-grpc/calculator/calculatorpb/: calculator.proto
learn-grpc/calculator/server/: server.go
microservice/: package.json  pnpm-lock.yaml
microservice/apps/api/: package.json
microservice/apps/api/src/: app.controller.ts  app.module.ts  app.service.ts
microservice/apps/log/: package.json
microservice/apps/log/src/: app.controller.ts  main.ts
proto/: calculator.proto  hero.proto
rust-grpc/: Cargo.toml  build.rs
rust-grpc/src/: hero.rs  main.rs
